--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -1,5 +1,5 @@
 ﻿@page "/fetchdata"
-@using EFarm.Server.Data
+@using Efarm.App.Data
 @inject WeatherForecastService ForecastService
 
 <PageTitle>Weather forecast</PageTitle>
