--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -20,7 +20,7 @@
 }
 
 
-<div class="container-fluid">
+<div class="container-fluid py-0 px-0">
   <footer>
     <div class="row col-12">
       <div class="col-6 col-md-3 mb-3">
