--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -13,6 +13,11 @@
                 </li>
 
                 <li class="nav-item active">
+                    <NavLink class="nav-link" href="/shop" Match="NavLinkMatch.All">
+                        Shop
+                    </NavLink>
+                </li>
+                <li class="nav-item active">
                     <NavLink class="nav-link" href="/basket" Match="NavLinkMatch.All">
                         Cart
                     </NavLink>
