--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,11 +6,11 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using EFarm.Server
-@using EFarm.Server.Shared
-@using EFarm.Server.Model
-@using EFarm.Server.Model.Dto
-@using EFarm.Server.Data
-@using EFarm.Server.Services
- 
-@using EFarm.Server.Shared.Components
+@using Efarm.App
+@using Efarm.App.Shared
+@using Efarm.App.Model
+@using Efarm.App.Model.Dto
+@using Efarm.App.Data
+@using Efarm.App.Services
+
+@using Efarm.App.Shared.Components
