Update as at Oct 13th

--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@using Efarm.App;
+@using EFarm.Server;
 @using Microsoft.AspNetCore.Components.Web
 @inject IHttpContextAccessor httpContextAssessor
 
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="Efarm.App.styles.css" rel="stylesheet" />
+    <link href="EFarm.Server.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
