--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -8,7 +8,6 @@
 @code{
     protected override Task OnInitializedAsync()
     {
-
 		if (httpContextAssessor.HttpContext != null)
 		{
 			var user = httpContextAssessor.HttpContext.Request.Cookies["user"];
@@ -19,33 +18,32 @@
     }
 }
 
-
 <div class="container-fluid py-0 px-0">
   <footer>
     <div class="row col-12">
       <div class="col-6 col-md-3 mb-3">
 		<h5>Owolabi Pius</h5>
 		<ul class="nav flex-column">
-		<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#Github" /></svg>Github</a></li>
-		<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#linkedin" /></svg>LinkedIn</a></li>
-		<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter" /></svg>Twitter</a></li>
+					<li class="ms-3"><a class="link-body-emphasis" href="https://github.com/opius2017"><svg class="bi" width="24" height="24"><use xlink:href="#Github" /></svg>Github</a></li>
+					<li class="ms-3"><a class="link-body-emphasis" href="https://www.linkedin.com/in/pius-owolabi-802058b"><svg class="bi" width="24" height="24"><use xlink:href="#LinkedIn" /></svg>LinkedIn</a></li>
+					<li class="ms-3"><a class="link-body-emphasis" href="https://www.twitter.com/piusowolabi"><svg class="bi" width="24" height="24"><use xlink:href="#Twitter" /></svg>Twitter</a></li>
 	</ul>
 	</div>
 
 	<div class="col-6 col-md-3 mb-3">
 		<h5>Innocent Charle Udo</h5>
 		<ul class="nav flex-column">
-			<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#Github" /></svg>Github</a></li>
-			<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#linkedin" /></svg>LinkedIn</a></li>
-			<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter" /></svg>Twitter</a></li>
+					<li class="ms-3"><a class="link-body-emphasis" href="https://github.com/Innocentsax"><svg class="bi" width="24" height="24"><use xlink:href="#Github" /></svg>Github</a></li>
+					<li class="ms-3"><a class="link-body-emphasis" href="https://www.linkedin.com/in/udo-innocent-charles/"><svg class="bi" width="24" height="24"><use xlink:href="#Linkedin" /></svg>LinkedIn</a></li>
+					<li class="ms-3"><a class="link-body-emphasis" href="https://twitter.com/Innocentsax"><svg class="bi" width="24" height="24"><use xlink:href="#Twitter" /></svg>Twitter</a></li>
 		</ul>
 	</div>
       <div class="col-6 col-md-3 mb-3">
 		<h5>Dr. Ben Asmah</h5>
         <ul class="nav flex-column">
-			<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#Github" /></svg>Github</a></li>
-			<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#linkedin" /></svg>LinkedIn</a></li>
-			<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter" /></svg>Twitter</a></li>
+					<li class="ms-3"><a class="link-body-emphasis" href="https://github.com/drbenasmah"><svg class="bi" width="24" height="24"><use xlink:href="#Github" /></svg>Github</a></li>
+					<li class="ms-3"><a class="link-body-emphasis" href="https://www.linkedin.com/in/ben-asmah-7a703a121/"><svg class="bi" width="24" height="24"><use xlink:href="#Linkedin" /></svg>LinkedIn</a></li>
+					<li class="ms-3"><a class="link-body-emphasis" href="https://twitter.com/AsmahPapa"><svg class="bi" width="24" height="24"><use xlink:href="#Twitter" /></svg>Twitter</a></li>
 		</ul>
 	</div>
 			<div class="d-flex flex-row align-items-center border-top">
